# rrulex

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: release.yml
crates/rrulex-cli/: Cargo.toml
crates/rrulex-cli/src/: main.rs
crates/rrulex-cli/tests/: golden_tests.rs
crates/rrulex-core/: Cargo.toml
crates/rrulex-core/src/: lib.rs
docs/: architecture.md
fixtures/cases/: expand_after_count.json  expand_between_with_limit.json  expand_dst_berlin_fall.json  expand_dst_berlin_spring.json  expand_exrule_direct.json  expand_ics_basic_weekly.json  expand_ics_date_dtstart.json  expand_ics_include_exclude.json  expand_monthly_first_friday.json  expand_multiple_rrules.json  expand_rdate_exdate_direct.json  expand_text_output.json  expand_unbounded_with_limit.json  expand_until_z.json  expand_weekly_between.json  expand_weekly_mowe_count10.json  expand_yearly_bymonth_byday.json  explain_excluded_exdate.json  explain_excluded_exrule.json  explain_ics_excluded.json  explain_ics_included.json  explain_included_rdate.json  explain_included_rrule.json  explain_multiple_rrule_index.json  explain_not_generated.json  explain_text_output.json  lint_bysetpos_warning.json  lint_clean_rule.json  lint_date_dtstart_until_datetime_mismatch.json  lint_ics_until_local.json  lint_text_output.json  lint_unbounded_warning.json  lint_unbounded_with_limit_context.json  lint_until_local_warning.json  lint_until_type_mismatch_datetime.json  safety_between_start_after_end.json  safety_limit_exceeded_between.json  safety_unbounded_without_limit_or_window.json
(+35 files in other folders)
