[package]
name = "rrulex-cli"
description = "A CLI tool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rrulex-cli"
path = "src/main.rs"

[dependencies]
rrulex-core = { path = "../rrulex-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[dev-dependencies]
similar = "2"
