[package]
name = "rrulex"
description = "CLI-first RFC5545 RRULE expander + linter + explain tool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rrulex"
path = "src/main.rs"

[dependencies]
rrulex-core = { path = "../rrulex-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
similar = "2"
