[package]
name = "rrulex-core"
description = "Core library for rrulex - RFC5545 RRULE processing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rrule = { version = "0.13", features = ["exrule"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
